# z-aggregate

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: causalpath-priors.tsv  collectri.tsv  dorothea.tsv  ensemble.tsv
reproduce/: README.md
reproduce/Reproduce Simulated Results/: README.md  notebook.ipynb  simulated_data_generator.py
reproduce/Reproduce scRNASeq Results/: README.md  create_supplementary_file.ipynb  generate_venn_diagrams.ipynb  mwu_delongs.ipynb  roc_pr_plots.ipynb  run_methods.ipynb
reproduce/Reproduce scRNASeq Results/common_tfs/: common_tfs_causalpath-priors.tsv  common_tfs_collectri.tsv  common_tfs_dorothea.tsv  common_tfs_ensemble.tsv
reproduce/Reproduce scRNASeq Results/results/Methods_MWU-Delongs/: DeLong_top2_merged.tsv  MWU_merged.tsv  Method_performance_summary.tsv
reproduce/Reproduce scRNASeq Results/results/Priors_MWU-Delongs/: DeLong_top2_No-Ensemble_AllAvailableTFs.tsv  (+9 more)
reproduce/Reproduce scRNASeq Results/scripts/: utility_functions.py
reproduce/scRNASeq_results_reproduce/: notebook.ipynb
reproduce/simulated_results_reproduce/: notebook.ipynb  simulated_data_generator.py  simulated_data_notebook.ipynb  simulated_data_parameters.json
reproduce/simulated_results_reproduce/simulated_data/: simulated_ground_truth.tsv  simulated_prior_data.tsv  simulated_scRNASeq_data.tsv
src/: WeightType.py  cli.py  preprocessing.py  z_aggregate.py
supplementry/: notebook.ipynb
supplementry/simulated_data/: simulated_ground_truth.tsv  simulated_prior_data.tsv  simulated_scRNASeq_data.tsv
(+16 files in other folders)
