[project]
name = "z-aggregate"
version = "1.0.0"
description = "A fast and efficient statistical method for predicting transcription factor activities from transcriptomic profiles using prior knowledge of target genes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.12.6",
    "decoupler[full]>=2.1.2",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scanpy>=1.11.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "seaborn>=0.13.0",
    "ipykernel>=6.29.0",
    "matplotlib-venn>=1.1.2",
    "venn>=0.1.3",
]

[project.scripts]
z-aggregate = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "black>=26.3.1",
]

